# qililab

./: .bandit  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  <Mock name='mock.db_manager.add_measurement().result_path' id='124759376700864'>  <Mock name='mock.db_manager.add_measurement().result_path' id='127548365969472'>  <Mock name='mock.db_manager.add_measurement().result_path' id='136796665310912'>  <Mock name='mock.db_manager.add_measurement().result_path' id='139147267363632'>  CHANGELOG.md  CONTEXT.md  MANIFEST.in  README.md  app.py  changelog-dev.md  ci-requirements.txt  dev-requirements.txt  dummy.ipynb  galadriel.yml  github-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.yml
.github/: CODEOWNERS  codecov.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: bumpversion.yaml  changelog_reminder.yml  ci.yml  code_quality.yml  create_project_card.yml  docs.yml  main_ci.yml  pull_request_ci.yml  python-publish-version.yml  pythonpublish.yml  tests.yml
Sequence Diagrams PUML/: Experiment Sequence Diagram.puml
Sequence Diagrams PUML/Execution Enter/: Execution __enter__.puml
Sequence Diagrams PUML/Execution Exit/: Execution __exit__.puml
Sequence Diagrams PUML/Experiment Recursive Loops/: Experiment recursive loops.puml
Sequence Diagrams PUML/LivePlot Creation/: LivePlot Creation.puml
Sequence Diagrams PUML/Results Creation/: Results Creation.puml
demo/: demo.md
demos/: rabi.ipynb
doc/: DEVELOPMENT.md  GLOBAL_GITIGNORE.md  NCO_demo.ipynb  README.md  distortions.drawio
doc/Sequence Diagrams PNG/: README.txt
doc/Sequence Diagrams PUML/: Experiment Sequence Diagram.puml  README
doc/releases/: changelog-dev.md
docs/: Makefile  changelog.rst  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/: test.txt
docs/adr/: 0001-two-layer-parameter-validation.md  0002-set-parameter-shim.md
docs/api/: qililab.Arbitrary.rst  qililab.Barrier.rst  qililab.CPhase.rst  qililab.Circuit.rst  qililab.CircuitTranspiler.rst  qililab.DRAGPulse.rst  qililab.Drag.rst  qililab.Experiment.rst  qililab.ExperimentOptions.rst  qililab.ExperimentSettings.rst  qililab.Gaussian.rst  qililab.GaussianPulse.rst  qililab.Loop.rst  qililab.Measure.rst  qililab.Parameter.rst  qililab.Park.rst  qililab.QProgram.rst  qililab.QiliQasmConverter.rst  qililab.R180.rst  qililab.Reset.rst  qililab.Results.rst  qililab.Rxy.rst  qililab.Square.rst  qililab.SquarePulse.rst  qililab.Wait.rst  qililab.Waveform.rst  qililab.X.rst  qililab.build_platform.rst  qililab.execute.execute.rst  qililab.execute.rst  qililab.load.rst  qililab.logger.rst  qililab.save_platform.rst  qililab.translate_circuit.rst
docs/code/: automatic_calibration.rst  calibration.rst  chip.rst  digital.rst  drivers.rst  execute.rst  experiment.rst  platform.rst  pulse.rst  qililab.chip.nodes.rst  qililab.chip.rst  qililab.circuit.converters.rst  qililab.circuit.nodes.rst  qililab.circuit.operations.pulse_operations.rst  qililab.circuit.operations.rst  qililab.circuit.operations.special_operations.rst  qililab.circuit.operations.translatable_to_pulse_operations.rst  qililab.circuit.rst  qililab.config.rst  qililab.drivers.instruments.era_synth.rst  qililab.drivers.instruments.keithley.rst  qililab.drivers.instruments.qblox.rst  qililab.drivers.instruments.rohde_schwarz.rst  qililab.drivers.instruments.rst  qililab.drivers.instruments.yokogawa.rst  qililab.drivers.interfaces.rst  qililab.drivers.rst  qililab.exceptions.rst  qililab.execution.rst  qililab.experiment.portfolio.rst  qililab.experiment.rst  qililab.instrument_connections.rst  qililab.instrument_controllers.keithley.rst  (+39 more)
examples/: README.md  all_platform.yml  bus_debugging.ipynb  cavity_spectroscopy.py  classmethod.ipynb  create_calibration.ipynb  demo.ipynb  demo.py  demo_execute_annealing.ipynb  draw_experiment.py  example.ipynb  example.py  example_execute_qibo_circuit.py  example_guille.py  example_using_all_xy_experiment.ipynb  example_using_qililab.ipynb  example_using_simulator.ipynb  example_using_soprano.ipynb  flipping_experiment.ipynb  flux_spectroscopy.py  flux_spectroscopy_example.ipynb  format_results.py  galadriel.yml  internal_circuit.py  keithley_driver.py  load_data.py  load_experiment.py  load_platform.py  load_result.py  loop_example.ipynb  measurement_block.ipynb  memory_allocation.ipynb  opx.yml  opx_demo.ipynb  parameterized_gate_loop.ipynb  platform.yml  pulse_operations.py  punchout.py  pydantic.ipynb  pydantic_bus.ipynb  (+24 more)
new-doc/: conf.py  index.rst
slurm/: slurm_job_example.ipynb  slurm_magic_methods.py
src/qililab/: about.py  (+23 more)
static/: style.css
templates/: dashboard.html  experiments.html  index.html
tests/: .pylintrc  __init__.py  conftest.py  data.py  galadriel.yml  new_galadriel.yml  side_effect.py  test_about.py  test_backend.py  test_boilerplate.py  test_data_management.py  test_execute_circuit.py  test_instruments.py  test_load_data.py  test_optionals.py  test_parameter.py  test_qililab.py  test_qililab_execute.py  test_settings_manager.py  test_slurm.py  test_utils.py  test_yaml.py  utils.py
(+1675 files in other folders)
