[project]
name = "qililab"
version = "0.30.1"
description = "Fundamental package for fast characterization and calibration of quantum chips."
authors = [{name = "Qilimanjaro Quantum Tech", email = "info@qilimanjaro.tech"}]
urls = {Repository = "https://github.com/qilimanjaro-tech/qililab"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["quantum control"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "dash>=3.0.2",
    "dill>=0.3.9",
    "h5py>=3.13.0",
    "networkx>=3.4.2",
    "pandas==1.5.3",
    "papermill>=2.6.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pyvisa-py>=0.7.2",
    "qblox-instruments==0.16.0",
    "qcodes>=0.51.0",
    "qcodes-contrib-drivers>=0.23.0",
    "qibo==0.2.15",
    "qpysequence>=0.10.8",
    "rich>=14.0.0",
    "ruamel-yaml>=0.18.10",
    "sqlalchemy>=2.0.40",
    "submitit>=1.5.2",
    "tqdm>=4.67.1",
    "urllib3>=2.3.0",
    "xarray>=2024.3.0",
]

[project.optional-dependencies]
quantum-machines = [
    "qm-qua==1.2.1",
    "qualang-tools>=0.19.3",
]

[dependency-groups]
dev = [
    "mdformat>=0.7.22",
    "mdformat-ruff>=0.1.3",
    "mypy>=1.15.0",
    "nbqa>=1.9.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pyvisa-sim>=0.6.0",
    "ruff>=0.11.2",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-automodapi>=0.18.0",
    "sphinx-design>=0.6.1",
    "sphinx-mdinclude>=0.6.2",
    "sphinxawesome-theme>=6.0.0b1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120
output-format = "concise"
target-version = "py310"
extend-exclude = ["test_*.py", "data.py"]

[tool.ruff.lint]
preview = true
select = [
    "F",
    "E",
    "W",
    "I",
    "YTT",
    # "ANN",
    "ASYNC",
    "S",
    "BLE",
    "CPY",
    "C4",
    # "DTZ",
    "T10",
    "FA",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    # "PYI",
    # "PT",
    "Q",
    "RSE",
    "RET",
    # "SLF",
    "SLOT",
    # "SIM",
    "TID",
    "TCH",
    # "PTH",
    # "TD",
    # "PL",
    # "NPY",
    # "FURB",
    # "DOC",
    "RUF"
]
ignore = [
    "E111",
    "E114",
    "E117",
    "E501",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "E741",
    "W191",
    "RET504",
    "SIM117",
    "PLC0414",
    "PLC2701",
    "PLR0904",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0917",
    "PLR1702"]
dummy-variable-rgx = "^_$"
logger-objects = ["qililab.logger"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "CPY", "SLF001", "PLR", "DOC", "RUF012"]
"docs/*" = ["CPY"]
"src/qililab/about.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["test_*"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"qililab" = "ql"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
ignore_missing_imports = true
exclude = [
    "\\.ipynb$",
    "^tests/.*"
]

[tool.commitizen]
version = "0.16.1"
version_files = [
    "src/qililab/config/version.py",
    "pyproject.toml:version"
]
tag_format = "$version"

[tool.coverage]
    [tool.coverage.report]
    show_missing = true
    exclude_lines = [
        # Have to re-enable the standard pragma
        "pragma: no cover",

        # Don"t complain about missing debug-only code:
        "def __repr__",
        "if self.debug",

        # Don"t complain if tests don"t hit defensive assertion code:
        "raise AssertionError",
        "raise NotImplementedError",

        # Don"t complain if non-runnable code isn"t run:
        "if 0:",
        "if __name__ == .__main__.:",

        # Don"t complain if TYPE_CHECKING is used:
        "if TYPE_CHECKING:"
    ]
    omit = [
        "env/*",
        "venv/*",
        "*/virtualenv/*",
        "*/virtualenvs/*",
        "*/tests/*",
        # TODO: Remove these once we modernize instruments
        "src/qililab/instruments/keithley/keithley_2600.py",
        "src/qililab/instruments/qblox/qblox_d5a.py",
        "src/qililab/instruments/qblox/qblox_s4g.py",
        "src/qililab/__init__.py"
    ]

[tool.nbqa.md]
mdformat = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
markers = [
    "qm: tests that require Quantum Machines",
]
